# hyfocus-testing

./: .gitignore  CMakeLists.txt  README.md  hyfocus.conf.example  hyprpm.toml  meson.build
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/06-eww-widget-ui/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-03-PLAN.md  06-RESEARCH.md
eww/: eww.scss  eww.yuck  hyprland-hyfocus.conf
eww/scripts/: backspace-input  close-challenge  close-start  hyfocus-control  hyfocus-listen  hyfocus-status  open-start  show-challenge  show-flash  start-session  submit-challenge  submit-challenge-btn  submit-challenge-input  toggle-workspace
eww/styles/: _challenge.scss  _flash.scss  _glass.scss  _start-panel.scss  _status.scss  _variables.scss
eww/widgets/: challenge-widget.yuck  control-panel.yuck  flash-widget.yuck  start-panel-widget.yuck  status-widget.yuck
eww/windows/: backdrop.yuck  challenge.yuck  flash.yuck  start-panel.yuck  status.yuck
src/: ExitChallenge.cpp  ExitChallenge.hpp  FocusTimer.cpp  FocusTimer.hpp  WindowShake.cpp  WindowShake.hpp  WorkspaceEnforcer.cpp  WorkspaceEnforcer.hpp  dispatchers.cpp  dispatchers.hpp  eventhooks.cpp  eventhooks.hpp  globals.hpp  log.hpp  main.cpp
